--- a/practice-4/solana-token/Cargo.toml
+++ b/practice-4/solana-token/Cargo.toml
@@ -9,6 +9,7 @@ solana-client = "1.14.0"
 
 spl-token = "3.4.0"
 spl-associated-token-account = "1.1.0"
+mpl-token-metadata = "1.3.0"
 
 dotenvy = "0.15.0"
 serde_json = "1.0"
